# cpp-indexable-set

./: CMakeLists.txt  indexableSet.h  word.cpp  word.h
tests/: test.cpp
